# 3d-farm

./: .editorconfig  .gitignore  .gitmodules  AGENTS.md  ESP32s3-partitions.csv  Makefile  README.md  mako-test.conf  sdkconfig  xedge-apps.json
apps/: AGENTS.md
apps/esp32/: .config  .preload
apps/esp32/.lua/: dht11.lua  ua_server.lua
apps/esp32_drybox/: index.html  package-lock.json  package.json  postbuild.js  tailwind.config.js
apps/esp32_drybox/lsp_app/: .preload  index.lsp
apps/esp32_drybox/lsp_app/api/: sensor_sync.lsp  user.lsp
apps/esp32_drybox/src/: App.tsx  index.css
apps/esp32_drybox_simulator/: .config
apps/esp32_simulator/: .config  .preload
apps/humidity_control/: Makefile
apps/login/: agents.md  package.json  vite.config.ts
apps/login/lsp_app/: .preload  callback.lsp  check_auth.lua  index.lsp
apps/login/src/: App.tsx  index.css
apps/mock_sso/: .preload  index.lsp
board_circuit/drybox/: drybox.kicad_pcb  drybox.kicad_prl  drybox.kicad_pro  drybox.kicad_sch
components/impulse/: CMakeLists.txt  idf_component.yml  impulse.cpp
components/impulse/include/: impulse.h
components/impulse/model/: README.txt
components/impulse/model/model-parameters/: model_metadata.h  model_variables.h
components/impulse/model/tflite-model/: tflite_learn_790245_34_compiled.cpp  tflite_learn_790245_34_compiled.h
freecad/: door-handle- DoorHolder.stl  door-handle-LockTighter.stl  door-handle-LockTighterMainHandle.stl  door-handle.20260217-192901.FCBak  door-handle.FCStd  fan-holder-Fan pad.3mf  fan-holder-Terminal.3mf  fan-holder.20260315-135200.FCBak  fan-holder.FCStd  pad-Body.3mf  pad-Body.stl  pad-Box.stl  pad-Cover.stl  pad-PowerSupplyCover.3mf  pad-PowerSupplyCover.stl  pad-SocketHolder.stl  pad.20260216-213804.FCBak  pad.FCStd
main/: BaESP32.c  CMakeLists.txt  idf_component.yml  main.c
server/humidity_control/: .preload
server/humidity_control/.lua/: dht11.lua  relay.lua
server/login/: index.html  package-lock.json
server/login/lsp_app/: callback.lsp  config.lua  index.lsp
server/mock_sso/: .preload
xedge/: README.md
(+4 files in other folders)
